--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,22 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.18",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.7.0",
+    "@mui/material": "^5.0.6",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-text-mask": "^5.5.0",
+    "text-mask-addons": "^3.8.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-text-mask": "^5.4.14",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
