--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.7.0",
-    "@mui/material": "^5.0.6",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
     "axios": "^1.7.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
