--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,8 +6,13 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist"
+    "resolveJsonModule": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "paths": {
+      "*": ["node_modules/*", "types/*"]
+    }
   },
-  "include": ["src"],
+  "include": ["src/**/*", "types/**/*"],
   "exclude": ["node_modules"]
 }
