--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
+    "natural": "^7.0.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
