--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,9 +10,17 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "*": ["node_modules/*", "types/*"]
+      "*": [
+        "node_modules/*",
+        "types/*"
+      ]
     }
   },
-  "include": ["src/**/*", "types/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*",
+    "types/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
