--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^9.0.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
