--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,7 +14,8 @@
         "node_modules/*",
         "types/*"
       ]
-    }
+    },
+    "typeRoots": ["node_modules/@types"]
   },
   "include": [
     "src/**/*",
