--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
 MONGODB_URI=mongodb+srv://zansk:zansk@zanskbot.nsz1cze.mongodb.net/?retryWrites=true&w=majority&appName=ZanskBot
+
+JWT_SECRET=your_secret_key
+EMAIL_SERVICE=your_email_service
+EMAIL_USER=your_email_user
+EMAIL_PASS=your_email_password
