--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "natural": "^7.0.6",
+    "nodemailer": "^6.9.13",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
